--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Lista de Tareas</title>
+<link rel="icon" type="image/x-icon" href="images/icon.png">
 <link rel="stylesheet" type="text/css" href="style.css">
+<title>Lista de Tareas</title>
 </head>
 <body>
 <h1>Lista de Tareas</h1>
